# codecatch

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.workers  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-workers.txt  requirements.txt
.github/workflows/: build.yml
api/: CLAUDE.md  __init__.py  main.py  schemas.py  templating.py
api/routes/: admin.py  api_v1.py  login.py  oauth.py
codecatch/: CLAUDE.md  __init__.py  audit.py  auth.py  bootstrap.py  config.py  crypto.py  db.py  logging_setup.py  mailbox_service.py  migrations.py  providers.py
db/: CLAUDE.md
db/init/: 00_schema.sql  01_seed.sql
db/migrations/: 0002_mode_and_forwarding.sql
extractors/: __init__.py
templates/: admins.html  api_keys.html  base.html  code_detail.html  codes.html  dashboard.html  extractor_playground.html  extractors.html  login.html  mailbox_detail.html  mailbox_form.html  mailboxes.html  metrics.html  oauth_pending.html  providers.html  silent.html  tenants.html
tests/: test_smoke.py
workers/: CLAUDE.md  __init__.py  code_writer.py  extractor.py  forwarding_probe.py  forwarding_setup.py  imap_worker.py  main.py  normalizer.py  oauth_refresh.py  oauth_worker.py
